<resources>
    <string name="app_name">Know Your Government</string>

    <string name="info_title">Know Your Government</string>
    <string name="info_copyright">&#169; 2018, Zhihao Ai</string>
    <string name="info_version">Version 1.0</string>
    <string name="menu_info">info</string>
    <string name="menu_location">location</string>
    <string name="address">Address:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="profile_picture">Profile picture</string>
    <string name="youtube_icon">youtube icon</string>
    <string name="google_plus_icon">google plus icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="fullsized_photo">official\'s full-sized photo</string>
    <string name="separator">separator</string>

</resources>
